fixed a mistake in base.html

--- a/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/base.html
+++ b/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/base.html
@@ -25,7 +25,7 @@
     {%- endif %}
     {%- raw %}
     <!-- Your stuff: Third-party CSS libraries go here -->
-    {% raw %}{% tailwind_css %}{% endraw %}
+    {% tailwind_css %}
     <!-- This file stores project-specific CSS -->
     {%- endraw %}{% if cookiecutter.frontend_pipeline == 'None' %}{% raw %}
     <link href="{% static 'css/project.css' %}" rel="stylesheet">
