changed base.html in theme app

--- a/{{cookiecutter.project_slug}}/theme/templates/base.html
+++ b/{{cookiecutter.project_slug}}/theme/templates/base.html
@@ -1,12 +1,13 @@
-{% load static tailwind_tags %}
-<!DOCTYPE html>
+{% raw %}{% load static tailwind_tags i18n {% endraw %}
 <html lang="en">
 	<head>
     <title>Django Tailwind</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		{% tailwind_css %}
+		{%- raw %}
+    		{% tailwind_css %}
+    	{%- endraw %}
 	</head>
 
 	<body class="bg-gray-50 font-serif leading-normal tracking-normal">
